--- a/getting_started.qmd
+++ b/getting_started.qmd
@@ -3,7 +3,7 @@ title: "Get Started"
 order: 1
 ---
 
-Download, unzip and validate an INTERLIS transfer file with _GRETL_:
+Let's start with a simple example: Download, unzip and validate an INTERLIS transfer file:
 
 ## Java flavour
 
@@ -99,4 +99,4 @@ docker run -i --rm --name gretl --entrypoint="/bin/sh" -v $PWD:/home/gradle/proj
 
 The most important part is the bind mount of the working directory (`$PWD`) to _/home/gradle/project/_ in the image. The image expects the _build.gradle_ file in this specific directory.
 
-If you want it a less verbose - especially if the run command gets more and more omplex by adding more options - you can use e.g. a [shell script](https://raw.githubusercontent.com/sogis/gretljobs/32e1e849332eb46c9b4e480101901de17a984190/start-gretl.sh).
+If you want it a less verbose - especially if the run command gets more and more complex by adding more options - you can use e.g. a [shell script](https://raw.githubusercontent.com/sogis/gretljobs/32e1e849332eb46c9b4e480101901de17a984190/start-gretl.sh).
