--- a/getting_started.qmd
+++ b/getting_started.qmd
@@ -22,6 +22,8 @@ buildscript {
         maven { url "https://jars.interlis.ch" }
         maven { url "https://repo.osgeo.org/repository/release/" }
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/releases/content/" }
+        maven { url "https://s01.oss.sonatype.org/service/local/repositories/snapshots/content/" }
         mavenCentral()
     }
 }
