--- a/getting_started.qmd
+++ b/getting_started.qmd
@@ -30,7 +30,7 @@ buildscript {
 
 plugins {
   id "de.undercouch.download" version "4.1.2"
-  id "ch.so.agi.gretl" version "2.2.+"
+  id "ch.so.agi.gretl" version "2.3.426"
 }
 
 defaultTasks 'validateData'
