--- a/documentation.qmd
+++ b/documentation.qmd
@@ -1336,14 +1336,15 @@ outputDir | Verzeichnis, in das die Metainfo-Datei gespeichert wird.
 
 Exportiert eine PostGIS-Raster-Spalte in eine Raster-Datei mittels SQL-Query. Die SQL-Query darf nur einen Record zurückliefern, d.h. es muss unter Umständen `ST_Union()` verwendet werden. Es angenommen, dass die erste _bytea_-Spalte des Resultsets die Rasterdaten enthält. Weitere _bytea_-Spalten werden ignoriert. Das Outputformat und die Formatoptionen müssen in der SQL-Datei (in der Select-Query) angegeben werden, z.B.:
 
-```
+```sql
 SELECT
     1::int AS foo, ST_AsGDALRaster((ST_AsRaster(ST_Buffer(ST_Point(2607880,1228287),10),150, 150)), 'AAIGrid', ARRAY[''], 2056) AS raster
 ;
 ```
 
 Beispiel:
-```
+
+```groovy
 task exportTiff(type: PostgisRasterExport) {
     database = [db_uri, db_user, db_pass]
     sqlFile = "raster.sql"
