--- a/deployment.qmd
+++ b/deployment.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Deployment"
 order: 2
+search: false
 ---
 
 _GRETL_ kann unterschiedlich deployed werden. Die ETL-Prozesse können somit auf unterschiedlichsten Runtimes ausgeführt werden.
