--- a/getting_started.qmd
+++ b/getting_started.qmd
@@ -8,7 +8,7 @@ Let's start with a simple example: Download, unzip and validate an INTERLIS tran
 
 ## Java flavour
 
-You need Java 1.8 and [_Gradle_](https://gradle.org) >= 5.1.1 (and < 6) installed on your machine.
+You need Java 11 and [_Gradle_](https://gradle.org) >= 7.6 installed on your machine.
 
 Create a _build.gradle_ file and paste the following code into the file:
 
@@ -30,8 +30,8 @@ buildscript {
 }
 
 plugins {
-  id "de.undercouch.download" version "4.1.2"
-  id "ch.so.agi.gretl" version "2.3.426"
+  id "de.undercouch.download" version "5.6.0"
+  id "ch.so.agi.gretl" version "3.0.+"
 }
 
 defaultTasks 'validateData'
@@ -55,14 +55,13 @@ tasks.register('validateData', IliValidator) {
 }
 ```
 
-To run your first GRETL job just type `gradle` in the terminal - in the same directory where you saved the _build.gradle_ file - and hit enter. On the first run, it will download a lot of dependencies (external libraries). Be patient and after downloading everything it will actually run the job and should finish with `BUILD SUCCESSFUL`.
+To run your first GRETL job just type `gradle --rerun-tasks` in the terminal - in the same directory where you saved the _build.gradle_ file - and hit enter. On the first run, it will download a lot of dependencies (external libraries). Be patient and after downloading everything it will actually run the job and should finish with `BUILD SUCCESSFUL`.
 
-If you want some more logging output, use `gradle -i` and you should see e.g. the well known output from [_ilivalidator_](https://github.com/claeis/ilivalidator).
+If you want some more logging output, use `gradle --rerun-tasks -i` and you should see e.g. the well known output from [_ilivalidator_](https://github.com/claeis/ilivalidator).
 
 ## Docker flavour
 
 You can build your very own image or just use [_docker.io/sogis/gretl:latest_](https://hub.docker.com/repository/docker/sogis/gretl/general). Since the image makes use of an _init.gradle_ file, the _build.gradle_ file looks a little bit different:
-
 
 ```groovy
 import java.nio.file.Paths
@@ -97,7 +96,7 @@ tasks.register('validateData', IliValidator) {
 Run the following Docker command in the directory where the _build.gradle_ file is stored:
 
 ```bash
-docker run -i --rm --name gretl --entrypoint="/bin/sh" -u $UID -v $PWD:/home/gradle/project sogis/gretl:latest -c 'gretl'
+docker run -i --rm --name gretl --entrypoint="/bin/sh" -u $UID -v $PWD:/home/gradle/project -v /tmp:/home/gradle/.gradle/caches sogis/gretl:3 -c 'gretl'
 ```
 
 The most important part is the bind mount of the working directory (`$PWD`) to _/home/gradle/project/_ in the image. The image expects the _build.gradle_ file in this specific directory.
