--- a/getting_started.qmd
+++ b/getting_started.qmd
@@ -31,7 +31,7 @@ buildscript {
 
 plugins {
   id "de.undercouch.download" version "5.6.0"
-  id "ch.so.agi.gretl" version "3.0.+"
+  id "ch.so.agi.gretl" version "3.1.+"
 }
 
 defaultTasks 'validateData'
@@ -51,7 +51,7 @@ tasks.register('unzipFile', Copy) {
 
 tasks.register('validateData', IliValidator) {
     dependsOn 'unzipFile'
-    dataFiles = ["2549.ch.so.agi.av.dm01_ch.itf"]
+    dataFiles = files("2549.ch.so.agi.av.dm01_ch.itf")
 }
 ```
 
@@ -89,14 +89,14 @@ tasks.register('unzipFile', Copy) {
 
 tasks.register('validateData', IliValidator) {
     dependsOn 'unzipFile'
-    dataFiles = ["2549.ch.so.agi.av.dm01_ch.itf"]
+    dataFiles = files("2549.ch.so.agi.av.dm01_ch.itf")
 }
 ```
 
 Run the following Docker command in the directory where the _build.gradle_ file is stored:
 
 ```bash
-docker run -i --rm --name gretl --entrypoint="/bin/sh" -u $UID -v $PWD:/home/gradle/project -v /tmp:/home/gradle/.gradle/caches sogis/gretl:3 -c 'gretl'
+docker run -i --rm --name gretl --entrypoint="/bin/sh" -u $UID -v $PWD:/home/gradle/project -v /tmp:/home/gradle/.gradle/caches sogis/gretl:3.1 -c 'gretl'
 ```
 
 The most important part is the bind mount of the working directory (`$PWD`) to _/home/gradle/project/_ in the image. The image expects the _build.gradle_ file in this specific directory.
